# HappyeBot

./: .gitignore  Cargo.toml
src/: auth.rs  browser.rs  commands.rs  error.rs  lib.rs  main.rs  request_endpoints.rs  twitch_auth.rs  twitch_bot.rs
src/auth/: bot_auth.rs  mod.rs
src/spotify/: client.rs  models.rs
