[package]
name = "happye_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
async-trait = "0.1.77"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
full = "0.1.0"
lazy_static = "1.4.0"
open = "5.1.2"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
